# struct_zero_egui

./: .gitignore  Cargo.toml  README.md
struct_zero_egui/: Cargo.toml  README.md
struct_zero_egui/examples/: derive.rs  manual_impl.rs
struct_zero_egui/src/: lib.rs
struct_zero_egui_derive/: Cargo.toml  README.md
struct_zero_egui_derive/doc/: attributs_derive.md
struct_zero_egui_derive/src/: lib.rs
